# FlexSQL

./: .gitignore  .gitmodules  README.md  eval_spider20.sh  pyproject.toml
claude_harness/: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt  workflow.md
claude_harness/.claude/: settings.json
claude_harness/.claude/hooks/: mark_revision.py  mark_writing.py  require_revision.py  require_writing.py
claude_harness/.claude/skills/sql-revision/: SKILL.md
claude_harness/.claude/skills/sql-writing/: SKILL.md
claude_harness/src/: db_tools.py  launcher.py  mcp_launcher.py  mcp_server.py  python_interpreter_worker.py  run_fold.py  run_question.py  verify_existing.py
src/: chat.py  get_ddl.py  logger.py  main.py  main_slurm_launcher.py  planning.py  prompt_templates.py  schema_linking.py  schema_linking_eval.py  solution_revision.py  solution_writing.py  tools.py  utils.py
src/parser/: snowflake_parser.py
src/preprocessing/: README.md  add_example_value.py  get_table_similarities.py  normalize_spider2_snowflake.py  remove_null_columns.py  run_all.sh
src/py2sql/: pandas_formatter.py  py2sf.py  py2sqlite.py
utils/: evaluate_passk.py  load_dataframes_worker.py  major_voting.py  merge_experiments.py  move_csv_to_evaluate_folder.py  program_frame.py  python_interpreter_worker.py  recover_correct_program.py  sql_frame.py
